# Poker

./: .gitignore
Core/: CMakeLists.txt  main.cpp
Core/Include/: Action.hpp  CMakeLists.txt  Card.hpp  Chips.hpp  Deck.hpp  Player.hpp  Pot.hpp  Shuffler.hpp  TableConfig.hpp  TableState.hpp
Core/Include/Entity/: Card.hpp  Chips.hpp  Deck.hpp  DeckConcept.hpp  Pot.hpp  Street.hpp
Core/Include/TableState/: Command.hpp  Handler.hpp  Helper.hpp  TableState.hpp
Core/Src/: CMakeLists.txt  Card.cpp
Core/Src/TableState/: Handler.cpp  Helper.cpp  TableState.cpp
Core/Test/: CMakeLists.txt  CardTest.cpp  DeckTest.cpp  Parser.hpp  TestFixture.hpp
Core/Test/TableState/: Betting.cpp  BettingTest.cpp  PlayerHandler.cpp  PlayerTest.cpp
Core/Test/TestCases/BettingScenarios/: ACall_Multiple.txt  ACall_Simple.txt  ARaise_Multiple.txt  ARaise_Simple.txt  BetCalled.txt  BetFoldedTo.txt  BetRaisedCalled.txt  CheckedThrough.txt  NoAction.txt
Core/Test/TestCases/Players/: AddingPlayers.txt  RemovingPlayers.txt
